# demo-temporal

./: .env  .gitignore  docker-compose.yaml  inference.sh  pyproject.toml
src/demo_temporal/: __init__.py  app.py  cpu_worker.py  gpu_worker.py  inference_activities.py  inference_workflow.py  pubchem_activites.py  pubchem_workflow.py
src/demo_temporal/workflows/: cpu_worker.py  gpu_worker.py  shared.py
src/demo_temporal/workflows/inference/: activities.py  llm.py  workflow.py
src/demo_temporal/workflows/pubchem/: activities.py  workflow.py
tests/workflows/inference/: test_llm.py
