[project]
name = "demo-temporal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed Ilyas", email = "ahmed.n.ilyas@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "temporalio>=1.12.0",
]
 
[project.scripts]
cpu-worker = "demo_temporal.workflows.cpu_worker:main"
gpu-worker = "demo_temporal.workflows.gpu_worker:main"

[project.optional-dependencies]
workflow = [
    "numpy>=2.2.6",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
